--- a/templates/base.html
+++ b/templates/base.html
@@ -9,22 +9,35 @@
         <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Bogle&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/app.css' %}">
+        {% block stylesheet %}{% endblock %}
     </head>
     <body>
+        {% block body %}
+            <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+                <div class="container">
+                    <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="'mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                    <div class="collapse navbar-collapse" id="mainMenu">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a href="nav-link" href="#">{{ user.username }}</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
             <div class="container">
-                <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
-            </div>
-        </nav>
-
-        <div class="container">
-            <ol class="breadcrumb my-4">
-                {% block breadcrumb %}
+                <ol class="breadcrumb my-4">
+                    {% block breadcrumb %}
+                    {% endblock %}
+                </ol>
+                {% block content %}
                 {% endblock %}
-            </ol>
-            {% block content %}
-            {% endblock %}
-        </div>
+            </div>
+        {% endblock body %}
     </body>
 </html>
