--- a/templates/reply_topic.html
+++ b/templates/reply_topic.html
@@ -29,8 +29,8 @@
         <button type="submit" class="btn btn-success">Post a reply</button>
     </form>
 
-    {% for post in topic.posts.all %}
-        <div class="card mb-2 {% if forloop.first %}border-dark{% endif %}">
+    {% for post in topic.get_last_ten_posts %}
+        <div class="card mb-2">
             {% if forloop.first %}
                 <div class="card-header text-white bg-dark py-2 px-3">{{ topic.subject }}</div>
             {% endif %}
